@@ -11,6 +11,9 @@
 
 package org.lateralgm.file;
 
+import static org.lateralgm.file.ProjectFile.interfaceProvider;
+
+import java.awt.Color;
 import java.awt.Dimension;
 import java.awt.Point;
 import java.io.File;
@@ -23,14 +26,11 @@ import java.util.Queue;
 import java.util.Stack;
 import java.util.zip.DataFormatException;
 
-import javax.swing.JProgressBar;
-
 import org.lateralgm.components.impl.ResNode;
+import org.lateralgm.file.ProjectFile.InterfaceProvider;
 import org.lateralgm.file.ProjectFile.ResourceHolder;
 import org.lateralgm.file.iconio.ICOFile;
-import org.lateralgm.main.LGM;
 import org.lateralgm.main.Util;
-import org.lateralgm.messages.Messages;
 import org.lateralgm.resources.Background;
 import org.lateralgm.resources.Background.PBackground;
 import org.lateralgm.resources.Constants;
@@ -47,9 +47,10 @@ import org.lateralgm.resources.GameSettings.ProgressBar;
 import org.lateralgm.resources.GmObject;
 import org.lateralgm.resources.GmObject.PGmObject;
 import org.lateralgm.resources.Include;
+import org.lateralgm.resources.Include.ExportAction;
+import org.lateralgm.resources.Include.PInclude;
 import org.lateralgm.resources.InstantiableResource;
 import org.lateralgm.resources.Path;
-import org.lateralgm.resources.Shader;
 import org.lateralgm.resources.Path.PPath;
 import org.lateralgm.resources.Resource;
 import org.lateralgm.resources.ResourceReference;
@@ -57,6 +58,7 @@ import org.lateralgm.resources.Room;
 import org.lateralgm.resources.Room.PRoom;
 import org.lateralgm.resources.Script;
 import org.lateralgm.resources.Script.PScript;
+import org.lateralgm.resources.Shader;
 import org.lateralgm.resources.Sound;
 import org.lateralgm.resources.Sound.PSound;
 import org.lateralgm.resources.Sprite;
@@ -78,6 +80,7 @@ import org.lateralgm.resources.sub.Instance.PInstance;
 import org.lateralgm.resources.sub.MainEvent;
 import org.lateralgm.resources.sub.Moment;
 import org.lateralgm.resources.sub.PathPoint;
+import org.lateralgm.resources.sub.ShapePoint;
 import org.lateralgm.resources.sub.Tile;
 import org.lateralgm.resources.sub.Tile.PTile;
 import org.lateralgm.resources.sub.Trigger;
@@ -91,7 +94,7 @@ public final class GmFileReader
 		{
 		}
 
-	static Queue<PostponedRef> postpone = new LinkedList<PostponedRef>();
+	private static Queue<PostponedRef> postpone = new LinkedList<PostponedRef>();
 
 	static interface PostponedRef
 		{
@@ -154,9 +157,10 @@ public final class GmFileReader
 	private static GmFormatException versionError(ProjectFile f, String error, String res, int i,
 			int ver)
 		{
-		return new GmFormatException(f,Messages.format(
-				"ProjectFileReader.ERROR_UNSUPPORTED",Messages.format( //$NON-NLS-1$
-						"ProjectFileReader." + error,Messages.getString("LGM." + res),i),ver)); //$NON-NLS-1$  //$NON-NLS-2$
+		InterfaceProvider ip = ProjectFile.interfaceProvider;
+		return new GmFormatException(f,ip.format(
+				"ProjectFileReader.ERROR_UNSUPPORTED",ip.format( //$NON-NLS-1$
+						"ProjectFileReader." + error,ip.translate("LGM." + res),i),ver)); //$NON-NLS-1$  //$NON-NLS-2$
 		}
 
 	public static void readProjectFile(InputStream stream, ProjectFile file, URI uri, ResNode root)
@@ -168,24 +172,25 @@ public final class GmFileReader
 	public static void readProjectFile(InputStream stream, ProjectFile file, URI uri, ResNode root,
 			Charset forceCharset) throws GmFormatException
 		{
+		interfaceProvider.init(200,"ProgressDialog.GMK_LOADING"); //$NON-NLS-1$
 		GmStreamDecoder in = null;
 		RefList<Timeline> timeids = new RefList<Timeline>(Timeline.class); // timeline ids
 		RefList<GmObject> objids = new RefList<GmObject>(GmObject.class); // object ids
 		RefList<Room> rmids = new RefList<Room>(Room.class); // room id
 		try
 			{
-			long startTime = System.currentTimeMillis();
 			in = new GmStreamDecoder(stream);
 			ProjectFileContext c = new ProjectFileContext(file,in,timeids,objids,rmids);
 			int identifier = in.read4();
 			if (identifier != 1234321)
-				throw new GmFormatException(file,Messages.format("ProjectFileReader.ERROR_INVALID",uri, //$NON-NLS-1$
-						identifier));
+				throw new GmFormatException(file,
+						interfaceProvider.format("ProjectFileReader.ERROR_INVALID", //$NON-NLS-1$
+						uri,identifier));
 			int ver = in.read4();
 			file.format = ProjectFile.FormatFlavor.getVersionFlavor(ver);
 			if (ver != 530 && ver != 600 && ver != 701 && ver != 800 && ver != 810)
 				{
-				String msg = Messages.format("ProjectFileReader.ERROR_UNSUPPORTED",uri,ver); //$NON-NLS-1$
+				String msg = interfaceProvider.format("ProjectFileReader.ERROR_UNSUPPORTED",uri,ver); //$NON-NLS-1$
 				throw new GmFormatException(file,msg);
 				}
 
@@ -199,14 +204,9 @@ public final class GmFileReader
 			else
 				in.setCharset(forceCharset);
 
-			//TODO: fix exception here caused by trying to open file too soon after loading LGM
-			JProgressBar progressBar = LGM.getProgressDialogBar();
-			progressBar.setMaximum(200);
-			LGM.setProgressTitle(Messages.getString("ProgressDialog.GMK_LOADING")); //$NON-NLS-1$
-
 			GameSettings gs = c.f.gameSettings.get(0);
 
-			LGM.setProgress(0,Messages.getString("ProgressDialog.SETTINGS")); //$NON-NLS-1$
+			interfaceProvider.setProgress(0,"ProgressDialog.SETTINGS"); //$NON-NLS-1$
 			if (ver == 530) in.skip(4); //reserved 0
 			if (ver == 701)
 				{
@@ -228,35 +228,36 @@ public final class GmFileReader
 
 			if (ver >= 800)
 				{
-				LGM.setProgress(10,Messages.getString("ProgressDialog.TRIGGERS")); //$NON-NLS-1$
+				interfaceProvider.setProgress(10,"ProgressDialog.TRIGGERS"); //$NON-NLS-1$
 				readTriggers(c);
-				LGM.setProgress(20,Messages.getString("ProgressDialog.CONSTANTS")); //$NON-NLS-1$
+				interfaceProvider.setProgress(20,"ProgressDialog.CONSTANTS"); //$NON-NLS-1$
 				readConstants(c,gs);
 				}
 
-			LGM.setProgress(30,Messages.getString("ProgressDialog.SOUNDS")); //$NON-NLS-1$
+			interfaceProvider.setProgress(30,"ProgressDialog.SOUNDS"); //$NON-NLS-1$
 			readSounds(c);
-			LGM.setProgress(40,Messages.getString("ProgressDialog.SPRITES")); //$NON-NLS-1$
+			interfaceProvider.setProgress(40,"ProgressDialog.SPRITES"); //$NON-NLS-1$
 			readSprites(c);
-			LGM.setProgress(50,Messages.getString("ProgressDialog.BACKGROUNDS")); //$NON-NLS-1$
+			interfaceProvider.setProgress(50,"ProgressDialog.BACKGROUNDS"); //$NON-NLS-1$
 			int bgVer = readBackgrounds(c);
-			LGM.setProgress(60,Messages.getString("ProgressDialog.PATHS")); //$NON-NLS-1$
+			interfaceProvider.setProgress(60,"ProgressDialog.PATHS"); //$NON-NLS-1$
 			readPaths(c);
-			LGM.setProgress(70,Messages.getString("ProgressDialog.SCRIPTS")); //$NON-NLS-1$
+			interfaceProvider.setProgress(70,"ProgressDialog.SCRIPTS"); //$NON-NLS-1$
 			readScripts(c);
-			LGM.setProgress(80,Messages.getString("ProgressDialog.SHADERS")); //$NON-NLS-1$
+			interfaceProvider.setProgress(80,"ProgressDialog.SHADERS"); //$NON-NLS-1$
 			//TODO: GMK 820 reads shaders first
-			LGM.setProgress(90,Messages.getString("ProgressDialog.FONTS")); //$NON-NLS-1$
+			interfaceProvider.setProgress(90,"ProgressDialog.FONTS"); //$NON-NLS-1$
 			int rver = in.read4();
 			readFonts(c,rver);
-			LGM.setProgress(100,Messages.getString("ProgressDialog.TIMELINES")); //$NON-NLS-1$
+			interfaceProvider.setProgress(100,"ProgressDialog.TIMELINES"); //$NON-NLS-1$
 			readTimelines(c);
-			LGM.setProgress(110,Messages.getString("ProgressDialog.OBJECTS")); //$NON-NLS-1$
+			interfaceProvider.setProgress(110,"ProgressDialog.OBJECTS"); //$NON-NLS-1$
 			readGmObjects(c);
-			LGM.setProgress(120,Messages.getString("ProgressDialog.ROOMS")); //$NON-NLS-1$
+			interfaceProvider.setProgress(120,"ProgressDialog.ROOMS"); //$NON-NLS-1$
 			readRooms(c);
 
-			//If the "use as tileset" flag was not part of this version, try to infer it from the backgrounds used in room tiles.
+			//If the "use as tileset" flag was not part of this version,
+			//try to infer it from the backgrounds used in room tiles.
 			if (bgVer <= 400) {
 				for (Room rm : file.resMap.getList(Room.class)) {
 					for (Tile tl : rm.tiles) {
@@ -273,50 +274,51 @@ public final class GmFileReader
 
 			if (ver >= 700)
 				{
-				LGM.setProgress(130,Messages.getString("ProgressDialog.INCLUDEFILES")); //$NON-NLS-1$
+				interfaceProvider.setProgress(130,"ProgressDialog.INCLUDEFILES"); //$NON-NLS-1$
 				readIncludedFiles(c);
-				LGM.setProgress(140,Messages.getString("ProgressDialog.PACKAGES")); //$NON-NLS-1$
+				interfaceProvider.setProgress(140,"ProgressDialog.PACKAGES"); //$NON-NLS-1$
 				readPackages(c);
 				}
 
-			LGM.setProgress(150,Messages.getString("ProgressDialog.GAMEINFORMATION")); //$NON-NLS-1$
+			interfaceProvider.setProgress(150,"ProgressDialog.GAMEINFORMATION"); //$NON-NLS-1$
 			readGameInformation(c);
 
-			LGM.setProgress(160,Messages.getString("ProgressDialog.POSTPONED")); //$NON-NLS-1$
+			interfaceProvider.setProgress(160,"ProgressDialog.POSTPONED"); //$NON-NLS-1$
 			//Resources read. Now we can invoke our postpones.
 			int percent = 0;
 			for (PostponedRef i : postpone)
 				{
 				i.invoke();
 				percent += 1;
-				LGM.setProgress(160 + percent / postpone.size(),
-						Messages.getString("ProgressDialog.POSTPONED")); //$NON-NLS-1$
+				interfaceProvider.setProgress(160 + percent / postpone.size(),
+						"ProgressDialog.POSTPONED"); //$NON-NLS-1$
 				}
+			postpone.clear();
 
-			LGM.setProgress(170,Messages.getString("ProgressDialog.LIBRARYCREATION")); //$NON-NLS-1$
+			interfaceProvider.setProgress(170,"ProgressDialog.LIBRARYCREATION"); //$NON-NLS-1$
 			//Library Creation Code
 			ver = in.read4();
 			if (ver != 500)
-				throw new GmFormatException(file,Messages.format("ProjectFileReader.ERROR_UNSUPPORTED", //$NON-NLS-1$
-						Messages.getString("ProjectFileReader.AFTERINFO"),ver)); //$NON-NLS-1$
+				throw new GmFormatException(file,
+						interfaceProvider.format("ProjectFileReader.ERROR_UNSUPPORTED", //$NON-NLS-1$
+						interfaceProvider.translate("ProjectFileReader.AFTERINFO"),ver)); //$NON-NLS-1$
 			int no = in.read4();
 			for (int j = 0; j < no; j++)
 				in.skip(in.read4());
 
-			LGM.setProgress(180,Messages.getString("ProgressDialog.ROOMEXECUTION")); //$NON-NLS-1$
+			interfaceProvider.setProgress(180,"ProgressDialog.ROOMEXECUTION"); //$NON-NLS-1$
 			//Room Execution Order
 			ver = in.read4();
 			if (ver != 500 && ver != 540 && ver != 700)
-				throw new GmFormatException(file,Messages.format("ProjectFileReader.ERROR_UNSUPPORTED", //$NON-NLS-1$
-						Messages.getString("ProjectFileReader.AFTERINFO2"),ver)); //$NON-NLS-1$
+				throw new GmFormatException(file,
+						interfaceProvider.format("ProjectFileReader.ERROR_UNSUPPORTED", //$NON-NLS-1$
+						interfaceProvider.translate("ProjectFileReader.AFTERINFO2"),ver)); //$NON-NLS-1$
 			in.skip(in.read4() * 4);
 
-			LGM.setProgress(190,Messages.getString("ProgressDialog.FILETREE")); //$NON-NLS-1$
+			interfaceProvider.setProgress(190,"ProgressDialog.FILETREE"); //$NON-NLS-1$
 			readTree(c,root,ver);
 
-			LGM.setProgress(200,Messages.getString("ProgressDialog.FINISHED")); //$NON-NLS-1$
-			System.out.println(Messages.format("ProjectFileReader.LOADTIME",System.currentTimeMillis() //$NON-NLS-1$
-					- startTime));
+			interfaceProvider.setProgress(200,"ProgressDialog.FINISHED"); //$NON-NLS-1$
 			}
 		catch (Exception e)
 			{
@@ -335,7 +337,7 @@ public final class GmFileReader
 				}
 			catch (IOException ex)
 				{
-				String key = Messages.getString("GmFileReader.ERROR_CLOSEFAILED"); //$NON-NLS-1$
+				String key = interfaceProvider.translate("GmFileReader.ERROR_CLOSEFAILED"); //$NON-NLS-1$
 				throw new GmFormatException(file,key);
 				}
 			}
@@ -350,7 +352,8 @@ public final class GmFileReader
 		int ver = in.read4();
 		if (ver != 530 && ver != 542 && ver != 600 && ver != 702 && ver != 800 && ver != 810)
 			{
-			String msg = Messages.format("ProjectFileReader.ERROR_UNSUPPORTED","",ver); //$NON-NLS-1$ //$NON-NLS-2$
+			String msg = ProjectFile.interfaceProvider.format(
+					"ProjectFileReader.ERROR_UNSUPPORTED","",ver); //$NON-NLS-1$ //$NON-NLS-2$
 			throw new GmFormatException(c.f,msg);
 			}
 		if (ver >= 800) in.beginInflate();
@@ -385,7 +388,15 @@ public final class GmFileReader
 		p.put(PGameSettings.FREQUENCY,ProjectFile.GS_FREQS[frequency]);
 
 		in.readBool(p,PGameSettings.DONT_SHOW_BUTTONS);
-		if (ver > 530) in.readBool(p,PGameSettings.USE_SYNCHRONIZATION);
+		if (ver > 530)
+			{
+			// shout out to nik for finding this one!
+			// GM 8.1.141 D3D force software vertex processing
+			// is the high bit of the use vsync setting
+			int sync = in.read4();
+			p.put(PGameSettings.USE_SYNCHRONIZATION,(sync & 0x01) != 0);
+			p.put(PGameSettings.FORCE_SOFTWARE_VERTEX_PROCESSING,(sync & 0x80000000) != 0);
+			}
 		if (ver >= 800) in.readBool(p,PGameSettings.DISABLE_SCREENSAVERS);
 		in.readBool(p,PGameSettings.LET_F4_SWITCH_FULLSCREEN,PGameSettings.LET_F1_SHOW_GAME_INFO,
 				PGameSettings.LET_ESC_END_GAME,PGameSettings.LET_F5_SAVE_F6_LOAD);
@@ -477,18 +488,23 @@ public final class GmFileReader
 		for (int i = 0; i < no; i++)
 			{
 			Include inc = f.resMap.getList(Include.class).add();
-			inc.filepath = in.readStr();
-			inc.filename = new File(inc.filepath).getName();
+			String filepath = in.readStr();
+			String filename = new File(filepath).getName();
+			inc.put(PInclude.FILEPATH,filepath);
+			inc.put(PInclude.FILENAME,filename);
 			}
 		gs.put(PGameSettings.INCLUDE_FOLDER,ProjectFile.GS_INCFOLDERS[in.read4()]);
 		//		f.gameSettings.includeFolder = in.read4(); //0 = main, 1 = temp
 		in.readBool(gs.properties,PGameSettings.OVERWRITE_EXISTING,
 				PGameSettings.REMOVE_AT_GAME_END);
+		 //1 = temp, 2 = main
+		ExportAction exportAction = gs.get(PGameSettings.INCLUDE_FOLDER) == IncludeFolder.TEMP
+				? ExportAction.TEMP_DIRECTORY : ExportAction.SAME_FOLDER;
 		for (Include inc : f.resMap.getList(Include.class))
 			{
-			inc.export = gs.get(PGameSettings.INCLUDE_FOLDER) == IncludeFolder.TEMP ? 1 : 2; //1 = temp, 2 = main
-			inc.overwriteExisting = gs.get(PGameSettings.OVERWRITE_EXISTING);
-			inc.removeAtGameEnd = gs.get(PGameSettings.REMOVE_AT_GAME_END);
+			inc.put(PInclude.EXPORTACTION,exportAction);
+			inc.put(PInclude.OVERWRITE,gs.get(PGameSettings.OVERWRITE_EXISTING));
+			inc.put(PInclude.REMOVEATGAMEEND,gs.get(PGameSettings.REMOVE_AT_GAME_END));
 			}
 		}
 
@@ -593,12 +609,7 @@ public final class GmFileReader
 						in.read(snd.data);
 						}
 					}
-				int effects = in.read4();
-				for (PSound k : ProjectFile.SOUND_FX_FLAGS)
-					{
-					snd.put(k,(effects & 1) != 0);
-					effects >>= 1;
-					}
+				snd.setEffects(in.read4());
 				in.readD(snd.properties,PSound.VOLUME,PSound.PAN);
 				snd.put(PSound.PRELOAD,in.readBool());
 				}
@@ -818,7 +829,7 @@ public final class GmFileReader
 			}
 		}
 
-	private static void readFonts(ProjectFileContext c, int ver) throws IOException,GmFormatException
+	private static void readFonts(ProjectFileContext c, int ver) throws IOException,GmFormatException,DataFormatException
 		{
 		ProjectFile f = c.f;
 		GmStreamDecoder in = c.in;
@@ -834,23 +845,28 @@ public final class GmFileReader
 				if (!in.readBool()) continue;
 				in.skip(in.read4());
 				if (in.read4() != 440)
-					throw new GmFormatException(f,Messages.format("ProjectFileReader.ERROR_UNSUPPORTED", //$NON-NLS-1$
-							Messages.getString("ProjectFileReader.INDATAFILES"),ver)); //$NON-NLS-1$
+					{
+					InterfaceProvider ip = ProjectFile.interfaceProvider;
+					throw new GmFormatException(f,ip.format("ProjectFileReader.ERROR_UNSUPPORTED", //$NON-NLS-1$
+							ip.translate("ProjectFileReader.INDATAFILES"),ver)); //$NON-NLS-1$
+					}
 				Include inc = f.resMap.getList(Include.class).add();
-				inc.filepath = in.readStr();
-				inc.filename = new File(inc.filepath).getName();
+				String filepath = in.readStr();
+				String filename = new File(filepath).getName();
+				inc.put(PInclude.FILEPATH,filepath);
+				inc.put(PInclude.FILENAME,filename);
 				if (in.readBool()) //file data exists?
 					{
-					inc.size = in.read4();
-					inc.data = new byte[inc.size];
-					in.read(inc.data,0,inc.size);
+					inc.data = in.decompress(in.read4());
+					if (inc.data != null)
+						inc.put(PInclude.SIZE,inc.data.length);
 					}
-				inc.export = in.read4();
+				inc.put(PInclude.EXPORTACTION,ProjectFile.INCLUDE_EXPORT_ACTION[in.read4()]);
 				//FIXME: Deal with Font Includes
 				//if (inc.export == 3) inc.exportFolder = Font Folder?
-				inc.overwriteExisting = in.readBool();
-				inc.freeMemAfterExport = in.readBool();
-				inc.removeAtGameEnd = in.readBool();
+				inc.put(PInclude.OVERWRITE,in.readBool());
+				inc.put(PInclude.FREEMEMORY,in.readBool());
+				inc.put(PInclude.REMOVEATGAMEEND,in.readBool());
 				}
 			return;
 			}
@@ -876,7 +892,10 @@ public final class GmFileReader
 			int rangemin = in.read2();
 			font.put(PFont.CHARSET,in.read());
 			int aa = in.read();
+			// If GM8.0 or lower project doesn't have AA, use highest level
 			if (aa == 0 && f.format != ProjectFile.FormatFlavor.GM_810) aa = 3;
+			// AA is not 0-based in GM8.1, off==1 and 3==4
+			else --aa;
 			font.put(PFont.ANTIALIAS,aa);
 			font.addRange(rangemin,in.read4());
 			in.endInflate();
@@ -944,7 +963,7 @@ public final class GmFileReader
 			obj.setName(in.readStr());
 			if (ver == 800) in.skip(8); //last changed
 			int ver2 = in.read4();
-			if (ver2 != 430) throw versionError(f,"IN","OBJ",i,ver2); //$NON-NLS-1$ //$NON-NLS-2$
+			if (ver2 != 430 && ver2 != 820) throw versionError(f,"IN","OBJ",i,ver2); //$NON-NLS-1$ //$NON-NLS-2$
 			Sprite temp = f.resMap.getList(Sprite.class).getUnsafe(in.read4());
 			if (temp != null) obj.put(PGmObject.SPRITE,temp.reference);
 			in.readBool(obj.properties,PGmObject.SOLID,PGmObject.VISIBLE);
@@ -978,6 +997,22 @@ public final class GmFileReader
 						done = true;
 					}
 				}
+			if (ver2 >= 820)
+				{
+				in.readBool(obj.properties,PGmObject.PHYSICS_OBJECT,PGmObject.PHYSICS_SENSOR);
+				in.read4(obj.properties,PGmObject.PHYSICS_SHAPE);
+				in.readD(obj.properties,PGmObject.PHYSICS_DENSITY,PGmObject.PHYSICS_RESTITUTION);
+				in.read4(obj.properties,PGmObject.PHYSICS_GROUP);
+				in.readD(obj.properties,PGmObject.PHYSICS_DAMPING_LINEAR,PGmObject.PHYSICS_DAMPING_ANGULAR);
+				int ptc = in.read4(); // << number of shape points
+				if (ver2 >= 821)
+					{
+					in.readD(obj.properties,PGmObject.PHYSICS_FRICTION);
+					in.readBool(obj.properties,PGmObject.PHYSICS_AWAKE,PGmObject.PHYSICS_KINEMATIC);
+					}
+				for (int j = 0; j < ptc; ++j)
+					obj.shapePoints.add(new ShapePoint(in.readD(),in.readD()));
+				}
 			in.endInflate();
 			}
 		f.resMap.getList(GmObject.class).lastId = noGmObjects - 1;
@@ -1006,14 +1041,21 @@ public final class GmFileReader
 			rm.setName(in.readStr());
 			if (ver == 800) in.skip(8); //last changed
 			int ver2 = in.read4();
-			if (ver2 != 520 && ver2 != 541) throw versionError(f,"IN","RMM",i,ver2); //$NON-NLS-1$ //$NON-NLS-2$
+			if (ver2 != 520 && ver2 != 541 && ver2 != 810 && ver2 != 811 && ver2 != 820)
+				throw versionError(f,"IN","RMM",i,ver2); //$NON-NLS-1$ //$NON-NLS-2$
 			rm.put(PRoom.CAPTION,in.readStr());
 			in.read4(rm.properties,PRoom.WIDTH,PRoom.HEIGHT,PRoom.SNAP_Y,PRoom.SNAP_X);
 			rm.put(PRoom.ISOMETRIC,in.readBool());
 			rm.put(PRoom.SPEED,in.read4());
 			rm.put(PRoom.PERSISTENT,in.readBool());
 			rm.put(PRoom.BACKGROUND_COLOR,Util.convertGmColor(in.read4()));
-			rm.put(PRoom.DRAW_BACKGROUND_COLOR,in.readBool());
+			// NOTE: GM 8.1 is inconsistent with the views clear option being negated.
+			int backgroundViewClear = in.read4();
+			rm.put(PRoom.DRAW_BACKGROUND_COLOR,(backgroundViewClear & 1) != 0);
+			// GM 8.1 did not change version number of rooms for views clear
+			// because its meaning is the same as clearing the background color
+			// in prior Game Maker versions.
+			rm.put(PRoom.VIEWS_CLEAR,(backgroundViewClear & 0b10) == 0);
 			rm.put(PRoom.CREATION_CODE,in.readStr());
 			int nobackgrounds = in.read4();
 			for (int j = 0; j < nobackgrounds; j++)
@@ -1033,7 +1075,6 @@ public final class GmFileReader
 				{
 				View vw = rm.views.get(j);
 				in.readBool(vw.properties,PView.VISIBLE);
-				//vw.properties.put(PView.VISIBLE,in.readBool());
 				in.read4(vw.properties,PView.VIEW_X,PView.VIEW_Y,PView.VIEW_W,PView.VIEW_H,PView.PORT_X,
 						PView.PORT_Y);
 				if (ver2 > 520)
@@ -1057,6 +1098,14 @@ public final class GmFileReader
 				if (temp != null) inst.properties.put(PInstance.OBJECT,temp.reference);
 				inst.properties.put(PInstance.ID,in.read4());
 				inst.setCreationCode(in.readStr());
+				if (ver2 >= 810)
+					{
+					in.readD(inst.properties,PInstance.SCALE_X,PInstance.SCALE_Y);
+					Color color = Util.convertGmColorWithAlpha(in.read4());
+					inst.setColor(color);
+					inst.setAlpha(color.getAlpha());
+					}
+				if (ver2 >= 811) inst.properties.put(PInstance.ROTATION, in.readD());
 				inst.setLocked(in.readBool());
 				}
 			int notiles = in.read4();
@@ -1072,8 +1121,23 @@ public final class GmFileReader
 				t.setSize(new Dimension(in.read4(),in.read4()));
 				t.setDepth(in.read4());
 				t.properties.put(PTile.ID,in.read4());
+				if (ver2 >= 810)
+					{
+					in.readD(t.properties,PTile.SCALE_X,PTile.SCALE_Y);
+					Color color = Util.convertGmColorWithAlpha(in.read4());
+					t.setColor(color);
+					t.setAlpha(color.getAlpha());
+					}
 				t.setLocked(in.readBool());
 				rm.tiles.add(t);
+				}
+			if (ver2 >= 820)
+				{
+				rm.put(PRoom.PHYSICS_WORLD,in.readBool());
+				in.read4(rm.properties,PRoom.PHYSICS_TOP,PRoom.PHYSICS_LEFT,
+						PRoom.PHYSICS_RIGHT,PRoom.PHYSICS_BOTTOM);
+				in.readD(rm.properties,PRoom.PHYSICS_GRAVITY_X,PRoom.PHYSICS_GRAVITY_Y,
+						PRoom.PHYSICS_PIXTOMETERS);
 				}
 			rm.put(PRoom.REMEMBER_WINDOW_SIZE,in.readBool());
 			in.read4(rm.properties,PRoom.EDITOR_WIDTH,PRoom.EDITOR_HEIGHT);
@@ -1106,24 +1170,30 @@ public final class GmFileReader
 				}
 			ver = in.read4();
 			if (ver != 620 && ver != 800 && ver != 810)
-				throw new GmFormatException(f,Messages.format("ProjectFileReader.ERROR_UNSUPPORTED", //$NON-NLS-1$
-						Messages.getString("ProjectFileReader.ININCLUDEDFILES"),ver)); //$NON-NLS-1$
+				{
+				InterfaceProvider ip = ProjectFile.interfaceProvider;
+				throw new GmFormatException(f,ip.format("ProjectFileReader.ERROR_UNSUPPORTED", //$NON-NLS-1$
+						ip.translate("ProjectFileReader.ININCLUDEDFILES"),ver)); //$NON-NLS-1$
+				}
 			Include inc = f.resMap.getList(Include.class).add();
-			inc.filename = in.readStr();
-			inc.filepath = in.readStr();
-			inc.isOriginal = in.readBool();
-			inc.size = in.read4();
-			if (in.readBool()) //store in editable?
+			inc.put(PInclude.FILENAME,in.readStr());
+			inc.put(PInclude.FILEPATH,in.readStr());
+			inc.put(PInclude.ORIGINAL,in.readBool());
+			int size = in.read4();
+			inc.put(PInclude.SIZE,size);
+			boolean store = in.readBool();
+			inc.put(PInclude.STORE,store);
+			if (store)
 				{
 				int s = in.read4();
 				inc.data = new byte[s];
 				in.read(inc.data,0,s);
 				}
-			inc.export = in.read4();
-			inc.exportFolder = in.readStr();
-			inc.overwriteExisting = in.readBool();
-			inc.freeMemAfterExport = in.readBool();
-			inc.removeAtGameEnd = in.readBool();
+			inc.put(PInclude.EXPORTACTION,ProjectFile.INCLUDE_EXPORT_ACTION[in.read4()]);
+			inc.put(PInclude.EXPORTFOLDER,in.readStr());
+			inc.put(PInclude.OVERWRITE,in.readBool());
+			inc.put(PInclude.FREEMEMORY,in.readBool());
+			inc.put(PInclude.REMOVEATGAMEEND,in.readBool());
 			in.endInflate();
 			}
 		}
@@ -1185,25 +1255,34 @@ public final class GmFileReader
 			{
 			byte status = (byte) in.read4();
 			Class<?> type = ProjectFile.RESOURCE_KIND[in.read4()];
+			// It's "Data Files" in GM5, some of which are fonts.
+			if (ver == 500 && type == Font.class)
+				type = Include.class;
 			int ind = in.read4();
 			String name = in.readStr();
-			boolean hasRef;
+			boolean hasRef = false;
 			if (status == ResNode.STATUS_SECONDARY)
 				hasRef = type == Font.class ? ver != 500 : (type == null ? false
 						: InstantiableResource.class.isAssignableFrom(type));
-			else
-				hasRef = false;
 			ResourceList<?> rl = hasRef ? (ResourceList<?>) f.resMap.get(type) : null;
 			ResNode node = new ResNode(name,status,type,hasRef ? rl.getUnsafe(ind).reference : null);
+			if (ver == 500 && type == Include.class)
+				{
+				// Included files don't redundantly store the name with the metadata
+				// so we need to sync the resource name with the tree name.
+				if (hasRef) rl.getUnsafe(ind).setName(name);
 
-			if (ver == 500 && status == ResNode.STATUS_PRIMARY && type == Font.class)
-				path.peek().addChild(Messages.getString("LGM.FNT"),status,type); //$NON-NLS-1$
-			else
-				path.peek().add(node);
+				// GameMaker 5 did not have a dedicated primary fonts group, let's add one.
+				if (status == ResNode.STATUS_PRIMARY)
+					path.peek().addChild(ProjectFile.interfaceProvider.translate("LGM.FNT"), //$NON-NLS-1$
+							status,Font.class);
+				}
+
+			path.peek().add(node);
 			int contents = in.read4();
 			if (contents > 0)
 				{
-				left.push(new Integer(rootnodes));
+				left.push(Integer.valueOf(rootnodes));
 				rootnodes = contents;
 				path.push(node);
 				}
@@ -1212,25 +1291,46 @@ public final class GmFileReader
 				rootnodes = left.pop().intValue();
 				path.pop();
 				}
-
 			}
-		if (ver <= 540) root.addChild(Messages.getString("LGM.EXT"), //$NON-NLS-1$
+
+		ResNode incRoot = null;
+		if (ver == 500)
+			{
+			// For GameMaker 5 we need to move the "Data Files" folder
+			// to the place of the "Includes" folder in LGM's default tree
+			ResNode dataFileNode = (ResNode) root.getChildAt(6);
+			if (dataFileNode instanceof ResNode)
+				{
+				incRoot = (ResNode)dataFileNode;
+				incRoot.setUserObject("Includes");
+				root.remove(incRoot);
+				}
+			}
+		else
+			{
+			// All newer GameMaker versions don't have a primary node for included files.
+			// Therefore we need to create a primary node for them and construct a tree.
+			incRoot = new ResNode("Includes",ResNode.STATUS_PRIMARY,Include.class);
+			for (Include inc : f.resMap.getList(Include.class))
+				{
+				String filename = inc.get(PInclude.FILENAME).toString();
+				if (!filename.isEmpty())
+					inc.setName(Util.fileNameWithoutExtension(filename));
+				incRoot.add(new ResNode(inc.getName(),ResNode.STATUS_SECONDARY,Include.class,inc.reference));
+				}
+			}
+		root.insert(incRoot,9);
+
+		if (ver <= 540) root.addChild("Extension Packages",
 				ResNode.STATUS_SECONDARY,ExtensionPackages.class);
 
-		//TODO: This just makes the GMK arrange to the modern version of the IDE
+		//This just makes the GMK arrange to the modern version of the IDE
 		ResNode node = new ResNode("Shaders",ResNode.STATUS_PRIMARY,Shader.class);
 		root.insert(node,5);
 		node = new ResNode("Extensions",ResNode.STATUS_PRIMARY,Extension.class);
-		root.insert(node,10);
-		node = new ResNode("Includes",ResNode.STATUS_PRIMARY,Include.class);
-		root.insert(node,10);
-		for (Include inc : f.resMap.getList(Include.class))
-			{
-			node.add(new ResNode(inc.getName(),ResNode.STATUS_SECONDARY,Include.class));
-			}
+		root.insert(node,11);
 		node = new ResNode("Constants",ResNode.STATUS_SECONDARY,Constants.class);
 		root.insert(node,12);
-
 		}
 
 	private static void readActions(ProjectFileContext c, ActionContainer container, String errorKey,
@@ -1242,8 +1342,9 @@ public final class GmFileReader
 		int ver = in.read4();
 		if (ver != 400)
 			{
-			throw new GmFormatException(f,Messages.format("ProjectFileReader.ERROR_UNSUPPORTED", //$NON-NLS-1$
-					Messages.format("ProjectFileReader." + errorKey,format1,format2),ver)); //$NON-NLS-1$
+			InterfaceProvider ip = ProjectFile.interfaceProvider;
+			throw new GmFormatException(f,ip.format("ProjectFileReader.ERROR_UNSUPPORTED", //$NON-NLS-1$
+					ip.format("ProjectFileReader." + errorKey,format1,format2),ver)); //$NON-NLS-1$
 			}
 		int noacts = in.read4();
 		for (int k = 0; k < noacts; k++)
